name:                eved
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/foxhound-systems/eved#readme
license:             BSD3
license-file:        LICENSE
author:              Ben Levy 
maintainer:          ben@foxhound.systems 
copyright:           2021 Ben Levy 
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Eved
                       Web.Eved.Client
                       Web.Eved.ContentType
                       Web.Eved.Internal
                       Web.Eved.QueryParam
                       Web.Eved.Server
                       Web.Eved.UrlElement
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , http-types
                     , http-media
                     , http-client 
                     , http-api-data
                     , mtl
                     , scotty
                     , text
                     , wai

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/foxhound-systems/eved
